--- a/backend-clean/package.json
+++ b/backend-clean/package.json
@@ -1,23 +1,1 @@
-﻿\{
-  \ name\: \advancia-payledger-backend\,
-  \version\: \1.0.0\,
-  \description\: \Backend API for Advancia PayLedger\,
-  \main\: \dist/server.js\,
-  \scripts\: \{
-    \dev\: \ts-node-dev --respawn --transpile-only src/server.ts\,
-    \build\: \tsc\,
-    \start\: \node dist/server.js\
-  \},
-  \dependencies\: \{
-    \express\: \^4.18.2\,
-    \cors\: \^2.8.5\,
-    \helmet\: \^7.1.0\,
-    \dotenv\: \^16.3.1\
-  \},
-  \devDependencies\: \{
-    \@types/express\: \^4.17.21\,
-    \@types/cors\: \^2.8.17\,
-    \typescript\: \^5.3.3\,
-    \ts-node-dev\: \^2.0.0\
-  \}
-\}
+{"name":"advancia-payledger-backend","version":"1.0.0","description":"Backend API for Advancia PayLedger","main":"dist/server.js","scripts":{"dev":"ts-node-dev --respawn --transpile-only src/server.ts","build":"tsc","start":"node dist/server.js"},"dependencies":{"bcryptjs":"^2.4.3","cors":"^2.8.5","dotenv":"^16.3.1","express":"^4.18.2","helmet":"^7.1.0","jsonwebtoken":"^9.0.3"},"devDependencies":{"@types/bcryptjs":"^2.4.6","@types/cors":"^2.8.17","@types/express":"^4.17.21","@types/jsonwebtoken":"^9.0.5","ts-node-dev":"^2.0.0","typescript":"^5.3.3"}}
