--- a/frontend-clean/package.json
+++ b/frontend-clean/package.json
@@ -1,15 +1,1 @@
-﻿\{
-  \name\: \advancia-payledger-frontend\,
-  \version\: \1.0.0\,
-  \scripts\: \{
-    \dev\: \next dev\,
-    \build\: \next build\,
-    \start\: \next start\
-  \},
-  \dependencies\: \{
-    \next\: \^15.0.0\,
-    \react\: \^19.0.0\,
-    \react-dom\: \^19.0.0\,
-    \tailwindcss\: \^3.3.6\
-  \}
-\}
+{"name": "advancia-payledger-frontend", "version": "2.0.0", "description": "Advancia PayLedger - Global Financial Transformation Platform", "private": true, "scripts": {"dev": "next dev -p 3000", "build": "next build", "start": "next start"}, "dependencies": {"next": "^15.0.0", "react": "^19.0.0", "react-dom": "^19.0.0", "axios": "^1.6.2"}, "devDependencies": {"@types/react": "^19.0.0", "@types/react-dom": "^19.0.0", "typescript": "^5.3.3"}, "engines": {"node": "20.x", "npm": ">=9.0.0"}}
