Fix Web3 integration: Replace wagmi with ethers.js for better compatibility
- Remove wagmi, viem, @tanstack/react-query due to TypeScript compatibility issues
- Implement Web3 wallet connection using ethers.js directly
- Update WalletConnect component with native MetaMask integration
- Update tsconfig.json target to ES2020 for BigInt support
- Add .npmrc with legacy-peer-deps for deployment
- Build successfully completed with 0 errors

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -8,6 +8,7 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
+    "strictNullChecks": false,
     "noEmit": true,
     "incremental": true,
     "module": "esnext",
@@ -21,7 +22,7 @@
         "name": "next"
       }
     ],
-    "target": "ES2017"
+    "target": "ES2020"
   },
   "include": [
     "next-env.d.ts",
