Convert backend to in-memory storage (no database required)
- Created InMemoryStore class using JavaScript Maps for data storage
- Converted all routes (auth, wallet, transactions, healthcare, user) from MongoDB to in-memory
- Removed database dependencies (mongoose, redis, stripe, resend)
- Updated package.json with stable dependency versions
- Created comprehensive backend README with setup instructions
- Updated .env.example to reflect in-memory storage
- Added test-api.js for quick API verification
- Backend now runs without any database setup (data resets on restart)
- Perfect for development, testing, and prototyping
- See README.md for MongoDB upgrade path if persistence needed

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,41 +1,43 @@
-# MongoDB Atlas Configuration
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/advanciapayledger?retryWrites=true&w=majority
-MONGODB_DB_NAME=advanciapayledger
+# ============================================
+# IN-MEMORY STORAGE - NO DATABASE REQUIRED
+# ============================================
+# This backend uses in-memory storage (JavaScript Maps)
+# Data is stored in RAM and cleared on server restart
+# No MongoDB, PostgreSQL, Redis, or other database needed!
+#
+# For production with persistent data, see README.md
 
 # Server Configuration  
 NODE_ENV=development
 PORT=4000
-FRONTEND_URL=https://www.advanciapayledger.com
 
-# JWT Secret (change in production)
-JWT_SECRET=your-super-secret-jwt-key-change-in-production
+# JWT Secret (change in production!)
+# Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 JWT_EXPIRES_IN=7d
 
-# Stripe Integration
-STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
-STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
-STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
+# CORS Settings
+# Development: Allow all origins
+CORS_ORIGIN=*
+# Production: Set to your frontend domain
+# CORS_ORIGIN=https://www.advanciapayledger.com
 
-# Email Service (Resend)
-RESEND_API_KEY=re_your_resend_api_key
-FROM_EMAIL=noreply@advanciapayledger.com
-
-# Redis (for caching and sessions)
-REDIS_URL=redis://localhost:6379
-
-# Cloudflare (optional)
-CLOUDFLARE_ACCOUNT_ID=your_cloudflare_account_id
-CLOUDFLARE_API_TOKEN=your_cloudflare_api_token
-
-# Security
-CORS_ORIGIN=https://www.advanciapayledger.com
+# Rate Limiting (per IP address)
+RATE_LIMIT_WINDOW_MS=900000
 API_RATE_LIMIT=100
 
-# Web3 / Blockchain
-ETHEREUM_RPC_URL=https://mainnet.infura.io/v3/your-project-id
-POLYGON_RPC_URL=https://polygon-rpc.com
-WALLET_PRIVATE_KEY=your_wallet_private_key_for_gas_payments
+# ============================================
+# OPTIONAL: For future database integration
+# ============================================
+# Uncomment and configure if upgrading to MongoDB:
+# MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/advanciapayledger
+# MONGODB_DB_NAME=advanciapayledger
 
-# Healthcare API (if applicable)
-HEALTHCARE_API_KEY=your_healthcare_api_key
-INSURANCE_PROVIDER_API_KEY=your_insurance_provider_key
+# Uncomment if adding Stripe payments:
+# STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
+# STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
+
+# Uncomment if adding email notifications:
+# RESEND_API_KEY=re_your_resend_api_key
+# FROM_EMAIL=noreply@advanciapayledger.com
+
