--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -22,7 +22,10 @@
         "name": "next"
       }
     ],
-    "target": "ES2020"
+    "target": "ES2020",
+    "paths": {
+      "@/*": ["./*"]
+    }
   },
   "include": [
     "next-env.d.ts",
