--- a/.env.example
+++ b/.env.example
@@ -9,18 +9,17 @@ FRONTEND_URL=http://localhost:3000
 BACKEND_URL=http://localhost:4000
 PRODUCTION_FRONTEND_URL=https://advanciapayledger.com
 # ============================================
-# DATABASE CONFIGURATION
+# DEMO MODE (NO DATABASE)
 # ============================================
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/advancia_payledger
-# 
-REDIS_URL=redis://localhost:6379
+# This demo runs with in-memory storage.
+# Do NOT set DATABASE_URL / REDIS_URL for the demo.
 # ============================================
 # MVP MODE & FEATURE FLAGS
 # ============================================
-# Set MVP_MODE=true to disable Redis-dependent features
-MVP_MODE=false
+# Set MVP_MODE=true to keep everything “no external services”.
+MVP_MODE=true
 ENABLE_REDIS=false
-ENABLE_QUEUE=true
+ENABLE_QUEUE=false
 ENABLE_SOCIAL_MEDIA=true
 ENABLE_AI_FEATURES=true
 ENABLE_CRYPTO_FEATURES=true
