--- a/.env.template
+++ b/.env.template
@@ -20,10 +20,13 @@ REACT_APP_ENVIRONMENT=development
 # ============================================
 # DATABASE CONFIGURATION (PostgreSQL)
 # ============================================
-DATABASE_URL=postgresql://postgres:postgres@postgres:5432/advancia_payledger
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_DB=advancia_payledger
+
+# Demo mode uses in-memory storage (NO DATABASE).
+# Leave these unset for the demo.
+# DATABASE_URL=postgresql://postgres:postgres@postgres:5432/advancia_payledger
+# POSTGRES_USER=postgres
+# POSTGRES_PASSWORD=postgres
+# POSTGRES_DB=advancia_payledger
 
 # Production Database (High Availability)
 # DATABASE_URL=postgresql://postgres:your_secure_password@your-db-host:5432/advancia_payledger
