--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "strict": true,
     "noEmit": false,
     "esModuleInterop": true,
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "module": "node16",
+    "moduleResolution": "node16",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -18,7 +18,6 @@
         "name": "next"
       }
     ],
-    "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
       "@/components/*": ["./src/components/*"],
@@ -26,14 +25,13 @@
       "@/utils/*": ["./src/utils/*"]
     },
     "outDir": "./dist",
-    "rootDir": "./src",
     "declaration": true,
     "sourceMap": true,
     "forceConsistentCasingInFileNames": true
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.js"
+    "scripts/**/*.ts",
+    "scripts/**/*.js"
   ],
   "exclude": [
     "node_modules",
@@ -41,7 +39,6 @@
     "**/*.test.ts",
     "**/*.spec.ts",
     "prisma/**/*",
-    "scripts/**/*",
     "tests/**/*"
   ]
 }
